# solana-smart-contract-benchmark

./: .editorconfig  .gitignore  LICENSE  README.md  benchmark  package-lock.json  package.json  scratchpad.md  tsconfig.base.json
configs/: benchmark.default.json  retrieval-corpus.json  scoring.default.json  toolchains.json
configs/suites/: daily_v1.json  hard_v1.json  leaderboard_v1.json  nightmare_v1.json  personal_ranking_v1.json  ranking_v1.json
configs/suites/private/: README.md  personal_ranking_v1.example.json
docs/: IMPLEMENTATION_BLUEPRINT.md  adding-a-model.md  adding-a-task.md  benchmark-philosophy.md  prompt-protocol.md  retrieval-mode.md  scoring.md  validation.md
schemas/: model-output.schema.json  result.schema.json  run-config.schema.json  score-breakdown.schema.json  task.schema.json
scripts/: bootstrap.ts  check-structured-output.ts  run-reference-baselines.ts  validate-results.ts  validate-tasks.ts
tasks-private/: README.md
tasks/counter_authority/anchor/: track.config.json
tasks/counter_authority/anchor/starter/: Anchor.toml  Cargo.toml
tasks/counter_authority/anchor/starter/programs/counter_authority/: Cargo.toml
tasks/counter_authority/anchor/starter/programs/counter_authority/src/: lib.rs
tasks/counter_authority/anchor/starter/tests/: build-check.mjs
tasks/counter_authority/anchor/starter/tests-public/: Cargo.toml
tasks/counter_authority/anchor/tests-adversarial/: Cargo.toml  counter_authority.adversarial.spec.mjs
tasks/counter_authority/anchor/tests-adversarial/src/: adversarial.rs  common.rs
tasks/counter_authority/anchor/tests-hidden/: Cargo.toml  counter_authority.hidden.spec.mjs
tasks/counter_authority/anchor/tests-hidden/src/: common.rs  hidden.rs  lib.rs
tasks/counter_authority/anchor/tests-public/: counter_authority.public.spec.mjs
tasks/counter_authority/core/: prompt.md  rubric.json  spec.json
tasks/counter_authority/native/insecure-solution/src/: lib.rs
tasks/counter_authority/native/starter/: Cargo.toml
tasks/counter_authority/native/starter/tests-public/: Cargo.toml
tasks/counter_authority/native/starter/tests-public/src/: common.rs  public.rs
tasks/counter_authority/native/tests-adversarial/: Cargo.toml
tasks/counter_authority/native/tests-hidden/: Cargo.toml
tasks/escrow_basic/anchor/: track.config.json
tasks/escrow_basic/anchor/starter/: Anchor.toml  Cargo.toml
tasks/escrow_basic/anchor/starter/programs/escrow_basic/: Cargo.toml
tasks/escrow_basic/anchor/starter/programs/escrow_basic/src/: lib.rs
tasks/escrow_basic/anchor/tests-adversarial/: Cargo.toml  Test.toml
tasks/escrow_basic/anchor/tests-hidden/: Cargo.toml
tasks/escrow_basic/core/: prompt.md  rubric.json  spec.json
tasks/escrow_basic/native/: track.config.json
tasks/escrow_basic/native/starter/: Cargo.toml
tasks/escrow_basic/native/starter/tests-public/: Cargo.toml
tasks/escrow_basic/native/starter/tests-public/src/: common.rs  public.rs
tasks/escrow_basic/native/tests-adversarial/: Cargo.toml
tasks/escrow_basic/native/tests-hidden/: Cargo.toml
tasks/multisig_treasury/anchor/: track.config.json
tasks/multisig_treasury/anchor/starter/: Anchor.toml  Cargo.toml
tasks/multisig_treasury/anchor/starter/programs/multisig_treasury/: Cargo.toml
tasks/multisig_treasury/anchor/starter/programs/multisig_treasury/src/: lib.rs
tasks/multisig_treasury/anchor/tests-adversarial/: Cargo.toml
tasks/multisig_treasury/anchor/tests-hidden/: Cargo.toml
tasks/multisig_treasury/core/: prompt.md  rubric.json  spec.json
tasks/staking_pool_rewards/anchor/: track.config.json
tasks/staking_pool_rewards/anchor/starter/: Anchor.toml  Cargo.toml
tasks/staking_pool_rewards/anchor/tests-adversarial/: Cargo.toml
tasks/staking_pool_rewards/anchor/tests-hidden/: Cargo.toml
tasks/staking_pool_rewards/core/: prompt.md  rubric.json  spec.json
tasks/vault_basic/anchor/: track.config.json
tasks/vault_basic/anchor/starter/: Anchor.toml  Cargo.toml
tasks/vault_basic/anchor/starter/programs/vault_basic/: Cargo.toml
tasks/vault_basic/anchor/starter/programs/vault_basic/src/: lib.rs
tasks/vault_basic/anchor/tests-adversarial/: Cargo.toml
tasks/vault_basic/anchor/tests-hidden/: Cargo.toml
tasks/vault_basic/core/: prompt.md  rubric.json  spec.json
tasks/vault_basic/native/starter/: Cargo.toml
tasks/vault_basic/native/starter/src/: lib.rs
tasks/vault_basic/native/starter/tests-public/: Cargo.toml
tasks/vault_basic/native/starter/tests-public/src/: common.rs  public.rs
tasks/vault_basic/native/tests-adversarial/: Cargo.toml
tasks/vault_basic/native/tests-hidden/: Cargo.toml
tasks/vault_receipt_migration/anchor/: track.config.json
tasks/vault_receipt_migration/anchor/starter/: Anchor.toml  Cargo.toml
tasks/vault_receipt_migration/anchor/tests-adversarial/: Cargo.toml
tasks/vault_receipt_migration/anchor/tests-hidden/: Cargo.toml  Test.toml
tasks/vault_receipt_migration/core/: prompt.md  rubric.json  spec.json
tasks/vesting_router_cpi/anchor/: track.config.json
tasks/vesting_router_cpi/anchor/starter/: Anchor.toml  Cargo.toml
tasks/vesting_router_cpi/anchor/starter/programs/guarded_vault/: Cargo.toml
tasks/vesting_router_cpi/anchor/starter/programs/guarded_vault/src/: lib.rs
tasks/vesting_router_cpi/anchor/starter/programs/vesting_router_cpi/: Cargo.toml
tasks/vesting_router_cpi/anchor/starter/programs/vesting_router_cpi/src/: lib.rs
tasks/vesting_router_cpi/anchor/tests-adversarial/: Cargo.toml
tasks/vesting_router_cpi/anchor/tests-adversarial/src/: adversarial.rs
tasks/vesting_router_cpi/anchor/tests-hidden/: Cargo.toml
tasks/vesting_router_cpi/core/: prompt.md  rubric.json  spec.json
(+65 files in other folders)
