[package]
name = "vesting_router_cpi_adversarial_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.32.1"
vesting_router_cpi = { path = "../programs/vesting_router_cpi" }
guarded_vault = { path = "../programs/guarded_vault" }
spl-associated-token-account = "7"
spl-token = "8"

[workspace]
