[package]
name = "counter_authority_native_public_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
counter_authority_native = { path = ".." }
solana-program-test = "2.3.13"
solana-sdk = "2.3.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[workspace]
