[package]
name = "escrow_basic_native_public_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
escrow_basic_native = { path = ".." }
solana-program-test = "2.3.13"
solana-program = "2.3.0"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[workspace]
