[package]
name = "multisig_treasury"
version = "0.1.0"
description = "Threshold SPL token treasury for Solana benchmark testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "multisig_treasury"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
