[package]
name = "vault_basic"
version = "0.1.0"
description = "Shared SPL vault with per-user receipts for Solana benchmark testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vault_basic"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
