[package]
name = "guarded_vault"
version = "0.1.0"
description = "Fixed helper vault program for CPI-based benchmark tasks"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "guarded_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
